@@ -44,6 +44,7 @@
 #error TP_POOL support not implemented yet
 
 #elif defined( WINAPI )
+
 /* Start function helper function for WINAPI
  * Returns 0 if successful or 1 on error
  */
@@ -117,6 +118,7 @@ DWORD WINAPI libcthreads_thread_pool_callback_function_helper(
 }
 
 #elif defined( HAVE_PTHREAD_H )
+
 /* Start function helper function for pthread
  * Returns a pointer to a newly allocated int containing 1 if successful or -1 on error
  * NULL is return if the helper function was unable to run the callback
@@ -196,7 +198,7 @@ void *libcthreads_thread_pool_callback_function_helper(
 	 (void *) result );
 }
 
-#endif
+#endif /* defined( WINAPI ) && ( WINVER >= 0x0602 ) */
 
 /* Creates a thread pool
  * Make sure the value thread_pool is referencing, is set to NULL
@@ -938,9 +940,7 @@ int libcthreads_thread_pool_push(
 			 "%s: unable to wait for full condition.",
 			 function );
 
-			result = -1;
-
-			break;
+			goto on_error;
 		}
 	}
 	if( result == 1 )
@@ -966,7 +966,7 @@ int libcthreads_thread_pool_push(
 			 "%s: unable to broadcast empty condition.",
 			 function );
 
-			result = -1;
+			goto on_error;
 		}
 	}
 	if( libcthreads_mutex_release(
@@ -983,6 +983,245 @@ int libcthreads_thread_pool_push(
 		return( -1 );
 	}
 	return( result );
+
+on_error:
+	libcthreads_mutex_release(
+	 internal_thread_pool->condition_mutex,
+	 NULL );
+
+	return( -1 );
+}
+
+/* Pushes a value onto the thread pool in sorted order
+ *
+ * Uses the value_compare_function to determine the similarity of the values
+ * The value_compare_function should return LIBCTHREADS_COMPARE_LESS,
+ * LIBCTHREADS_COMPARE_EQUAL, LIBCTHREADS_COMPARE_GREATER if successful or -1 on error
+ *
+ * Returns 1 if successful, 0 if the value already exists or -1 on error
+ */
+int libcthreads_thread_pool_push_sorted(
+     libcthreads_thread_pool_t *thread_pool,
+     intptr_t *value,
+     int (*value_compare_function)(
+            intptr_t *first_value,
+            intptr_t *second_value,
+            libcerror_error_t **error ),
+     uint8_t sort_flags,
+     libcerror_error_t **error )
+{
+	libcthreads_internal_thread_pool_t *internal_thread_pool = NULL;
+	static char *function                                    = "libcthreads_thread_pool_push_sorted";
+	int compare_result                                       = 0;
+	int pop_index                                            = 0;
+	int push_index                                           = 0;
+	int result                                               = 0;
+	int value_index                                          = 0;
+
+	if( thread_pool == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid thread pool.",
+		 function );
+
+		return( -1 );
+	}
+	internal_thread_pool = (libcthreads_internal_thread_pool_t *) thread_pool;
+
+	if( internal_thread_pool->values_array == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_VALUE_MISSING,
+		 "%s: invalid queue - missing values array.",
+		 function );
+
+		return( -1 );
+	}
+	if( value == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid value.",
+		 function );
+
+		return( -1 );
+	}
+	if( value_compare_function == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid value compare function.",
+		 function );
+
+		return( -1 );
+	}
+	if( ( sort_flags & ~( LIBCTHREADS_SORT_FLAG_UNIQUE_VALUES ) ) != 0 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_UNSUPPORTED_VALUE,
+		 "%s: unsupported sort flags: 0x%02" PRIx8 ".",
+		 function,
+		 sort_flags );
+
+		return( -1 );
+	}
+	if( libcthreads_mutex_grab(
+	     internal_thread_pool->condition_mutex,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to grab condition mutex.",
+		 function );
+
+		return( -1 );
+	}
+	while( internal_thread_pool->number_of_values == internal_thread_pool->allocated_number_of_values )
+	{
+		if( libcthreads_condition_wait(
+		     internal_thread_pool->full_condition,
+		     internal_thread_pool->condition_mutex,
+		     error ) != 1 )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+			 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+			 "%s: unable to wait for full condition.",
+			 function );
+
+			goto on_error;
+		}
+	}
+	if( result == 1 )
+	{
+		pop_index = internal_thread_pool->pop_index;
+
+		for( value_index = 0;
+		     value_index < internal_thread_pool->number_of_values;
+		     value_index++ )
+		{
+			compare_result = value_compare_function(
+			                  value,
+			                  internal_thread_pool->values_array[ pop_index ],
+			                  error );
+
+			if( compare_result == -1 )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+				 LIBCERROR_RUNTIME_ERROR_GET_FAILED,
+				 "%s: unable to compare value: %d.",
+				 function,
+				 value_index );
+
+				goto on_error;
+			}
+			else if( compare_result == LIBCTHREADS_COMPARE_EQUAL )
+			{
+				if( ( sort_flags & LIBCTHREADS_SORT_FLAG_UNIQUE_VALUES ) != 0 )
+				{
+					result = 0;
+
+					break;
+				}
+			}
+			else if( compare_result == LIBCTHREADS_COMPARE_LESS )
+			{
+				result = 1;
+
+				break;
+			}
+			else if( compare_result != LIBCTHREADS_COMPARE_GREATER )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_UNSUPPORTED_VALUE,
+				 "%s: unsupported value compare function return value: %d.",
+				 function,
+				 compare_result );
+
+				goto on_error;
+			}
+		}
+	}
+	if( result != 0 )
+	{
+		if( compare_result == LIBCTHREADS_COMPARE_LESS )
+		{
+			for( push_index = internal_thread_pool->number_of_values - 1;
+			     push_index > pop_index;
+			     push_index-- )
+			{
+				internal_thread_pool->values_array[ push_index ] = internal_thread_pool->values_array[ push_index - 1 ];
+			}
+		}
+		else
+		{
+			push_index = pop_index;
+		}
+		internal_thread_pool->values_array[ push_index ] = value;
+
+		internal_thread_pool->push_index++;
+
+		if( internal_thread_pool->push_index >= internal_thread_pool->allocated_number_of_values )
+		{
+			internal_thread_pool->push_index = 0;
+		}
+		internal_thread_pool->number_of_values++;
+
+		/* The condition broadcast must be protected by the mutex for the WINAPI version
+		 */
+		if( libcthreads_condition_broadcast(
+		     internal_thread_pool->empty_condition,
+		     error ) != 1 )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+			 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+			 "%s: unable to broadcast empty condition.",
+			 function );
+
+			goto on_error;
+		}
+	}
+	if( libcthreads_mutex_release(
+	     internal_thread_pool->condition_mutex,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to release condition mutex.",
+		 function );
+
+		return( -1 );
+	}
+	return( result );
+
+on_error:
+	libcthreads_mutex_release(
+	 internal_thread_pool->condition_mutex,
+	 NULL );
+
+	return( -1 );
 }
 
 /* Joins the current with a specified thread pool
